Реализованы действия из пунктов меню файл и правка.

--- a/Compiler.csproj
+++ b/Compiler.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\RichTextBoxHelper.cs" />
     <Compile Include="Model\DocumentModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\DocumentsViewModel.cs" />
@@ -110,6 +111,9 @@
     <Resource Include="Icons\runAll.png" />
     <Resource Include="Icons\save.png" />
     <Resource Include="Icons\undo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\close.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
