Сделан сканер. Есть ошибка связанная с подсчетом строк

--- a/Compiler.csproj
+++ b/Compiler.csproj
@@ -75,6 +75,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Analysis\Scaner.cs" />
+    <Compile Include="Analysis\Token.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
