--- a/Compiler.csproj
+++ b/Compiler.csproj
@@ -75,6 +75,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Analysis\ErrorsGenerator.cs" />
+    <Compile Include="Analysis\Parser.cs" />
     <Compile Include="Analysis\Scaner.cs" />
     <Compile Include="Analysis\Token.cs" />
     <Compile Include="App.xaml.cs">
@@ -171,6 +173,9 @@
     <Resource Include="Icons\icons\runAll.png" />
     <Resource Include="Icons\icons\save.png" />
     <Resource Include="Icons\icons\undo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Analysis\gram.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
